Fix URL issue.